# CDT_rust

./: Cargo.toml
Mathematica/: 16x16DifferenceInLargeVSmallAction.nb  AnalyseSingleVP.nb  CDTFunctions.wl  Compare_Analytic_to_Statistical.nb  DistributionOfActions.nb  PathIntegralSumCDT.nb  TestingError.nb  Untitled-1.nb  analyse.nb  explorationwednesday24april.nb  exploringMultiplicityCalculation.nb  exploringcdtorders.nb  new_boundary_conditions.nb  single_volume_analyse.nb  testing_convergance.nb
Mathematica/Plots/: ComparingToGroundTruth.nb  StatisticalVolumeProfile.nb
benches/: benchmarks.rs
cdt_jupyter_notebooks/: CDT histograms.ipynb  CDTVolumeProfiles.ipynb  Untitled.ipynb  Untitled1.ipynb  randomgen.ipynb
cdt_jupyter_notebooks/.ipynb_checkpoints/: CDTVolumeProfiles-checkpoint.ipynb  Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  randomgen-checkpoint.ipynb  test-checkpoint.on1
examples/: analytic.rs  analytic_one_vp.rs  analytic_small_volume.rs  one_vp.rs  random_sample_from_large_volume.rs  statistical.rs  statistical_one_vp.rs  testing.rs
src/: cdt.rs  coordinates.rs  lib.rs  main.rs  main.test.rs  main_depr.rs  main_depricated.rs  move.rs  slab.rs  utils.rs  volume_profiles.rs
tests/: cdt.rs  slab.rs  volume_profile.rs
tests/cdt_ref/: cdt_ref_10.txt  cdt_ref_11.txt  cdt_ref_12.txt  cdt_ref_13.txt  cdt_ref_14.txt  cdt_ref_15.txt  cdt_ref_16.txt  cdt_ref_17.txt  cdt_ref_18.txt  cdt_ref_4.txt  cdt_ref_5.txt  cdt_ref_6.txt  cdt_ref_7.txt  cdt_ref_8.txt  cdt_ref_9.txt
