[profile.release]
debug = 1

[package]
name = "cdt_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#local 
grafferous = { path = "../iterated_rps/graph" }
itertools = "0.11.0"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false