[profile.release]
debug = 1

[package]
name = "cdt_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.46.0"
grafferous = "0.1.1"
itertools = "0.12.0"
rand = "0.8.5"
rayon = "1.7.0"
time = "0.3.29"
weighted_rand = "0.4.2"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false
